# inner_bot_server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  core-architecture-refactoring-plan.md  docker-compose.memory.yml  docker-compose.yml  kibana-init.sh  package-lock.json  package.json
ai-service/: .gitignore  .pre-commit-config.yaml  Dockerfile  README_LONG_TASKS.md  docker-compose.arq.yml  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml  test_bangumi_cache.py  test_langgraph_fix.py  test_search_subjects.py
ai-service/app/: README.md  ai.py  config.py  event_system.py  events.py  gpt.py  logging_config.json  main.py  meta_info.py  ollama.py  service.py  split_word.py
ai-service/app/agents/: __init__.py
ai-service/app/api/: __init__.py  chat.py  extraction.py  memory.py  message.py  router.py
ai-service/app/clients/: __init__.py  image_client.py  memory_client.py  redis.py
ai-service/app/config/: __init__.py  config.py  logging_config.json  memory_config.py  memory_service.py  openai_config.py
ai-service/app/core/: __init__.py  event_decorator.py  event_example.py  event_system.py  events.py  example_group_stream.py  group_stream.py
ai-service/app/langgraph_infra/: __init__.py  exceptions.py  model_builder.py
ai-service/app/long_tasks/: __init__.py  api.py  base.py  crud.py  executor.py  models.py  registry.py  worker.py
ai-service/app/memory/: embedding.py  l2_topic_service.py  l3_consensus_service.py  l3_memory_service.py  profile_agent.py  profile_service.py  profile_tools.py  worker.py
ai-service/app/orm/: base.py  crud.py  models.py
ai-service/app/services/: __init__.py  banned_word.py  chat_service.py  gpt.py  message_handler.py  meta_info.py  prompt_service.py  qdrant.py  quick_search.py  service.py
ai-service/app/tools/: README.md  __init__.py  builtin_tools.py  decorators.py  manager.py  registry.py  schema_generator.py  startup.py  topic_summary.py
ai-service/app/types/: chat.py  memory.py
ai-service/app/utils/: __init__.py  decorators.py  log_decorator.py  logger.py  message_formatter.py  split_word.py  status_processor.py  text_processor.py  time_parser.py
ai-service/app/workers/: README.md  __init__.py  unified_worker.py  vectorize_worker.py
ai-service/examples/: long_task_example.py
ai-service/scripts/: test_memory_system.py
ai-service/tests/: conftest.py  test_allcpp.py
(+886 files in other folders)
